--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
-    <link rel="stylesheet" th:href="@{/css/hover.css}">
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <title>Filmy</title>
 </head>
 <header th:fragment="header">
-    <nav class="navbar navbar-expand-lg bg-primary">
+    <nav class="navbar navbar-expand-lg" id="nav">
         <div class="container-fluid">
             <a class="text-light navbar-brand">Databáze filmů</a>
-            <div class="collapse navbar-collapse" id="navbarNav">
+            <div class="collapse navbar-collapse" id="navbarNav" >
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="text-light nav-link active" aria-current="page" href="#">Domov</a>
+                        <a class="text-light nav-link active" aria-current="page" href="/movie">Domov</a>
                     </li>
                     <li class="nav-item">
                         <a class="text-light nav-link" href="#">Features</a>
