--- a/src/main/resources/templates/movie-list.html
+++ b/src/main/resources/templates/movie-list.html
@@ -4,15 +4,26 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
     <title>Filmy</title>
 </head>
 <body>
     <div th:replace="~{fragments/nav.html :: header}"></div>
     <main class="container my-2">
-        <a href="/movie/new" class="btn btn-primary">Přidat nový film</a>
-        <div class="bg-primary placeholder col-12"></div>
-        <div th:each="movie : ${movies.content}">
-            <h2 th:text="${movie.name}"></h2>
+        <a href="/movie/new" class="btn my-1">Přidat nový film</a>
+        <div class="row row-cols-3">
+            <div th:each="movie : ${movies.content}" class="card p-0 mx-2 mb-3 overflow-hidden" style="width: 18rem;">
+                <div class="card-header">
+                    Žánry:
+                    <span th:each="genre : ${movie.getGenres()}" th:text="${genre.name}" class="badge mx-1"></span>
+                </div>
+                <img th:src="@{{path}(path=${movie.imagePath})}" class="card-img-top" alt="film">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${movie.name}"></h5>
+                    <a th:href="@{/movie/{id}(id=${movie.id})}" class="btn">Zobrazit detail</a>
+                </div>
+            </div>
+
         </div>
     </main>
 </body>
