--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -17,7 +17,7 @@
                         <a class="text-light nav-link active" aria-current="page" href="/movie">Domov</a>
                     </li>
                     <li class="nav-item">
-                        <a class="text-light nav-link" href="#">Features</a>
+                        <a class="text-light nav-link" href="/actor">Herci</a>
                     </li>
                     <li class="nav-item">
                         <a class="text-light nav-link" href="#">Pricing</a>
