--- a/src/main/resources/templates/movie-list.html
+++ b/src/main/resources/templates/movie-list.html
@@ -17,13 +17,12 @@
                     Žánry:
                     <span th:each="genre : ${movie.getGenres()}" th:text="${genre.name}" class="badge mx-1"></span>
                 </div>
-                <img th:src="@{{path}(path=${movie.imagePath})}" class="card-img-top" alt="film">
+                <img th:src="@{/{path}(path=${movie.imagePath})}" class="card-img-top" alt="film">
                 <div class="card-body">
                     <h5 class="card-title" th:text="${movie.name}"></h5>
                     <a th:href="@{/movie/{id}(id=${movie.id})}" class="btn">Zobrazit detail</a>
                 </div>
             </div>
-
         </div>
     </main>
 </body>
