--- a/src/main/resources/templates/movie-new.html
+++ b/src/main/resources/templates/movie-new.html
@@ -35,8 +35,15 @@
             <div class="mb-3">
                 <label for="genres" class="form-label">Žánry</label>
                 <select multiple th:field="*{genres}" class="form-control" id="genres">
-                    <option value="0" disabled>Vyberte žánr</option>
+                    <option value="0" disabled>Vyberte žánry</option>
                     <option th:each="genre : ${genreList}" th:text="${genre.name}" th:value="${genre.id}"></option>
+                </select>
+            </div>
+            <div class="mb-3">
+                <label class="form-label" for="actors">Herci</label>
+                <select class="form-control" th:field="*{actors}" multiple id="actors">
+                    <option value="0" disabled>Vyberte herce</option>
+                    <option th:each="actor : ${actors}" th:text="${actor.name} + ' ' + ${actor.surname}" th:value="${actor.id}"></option>
                 </select>
             </div>
             <div class="text-center">
