Přidána nová entita Country + endpoint pro zobrazení filmů podle Country

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -8,12 +8,12 @@ main .btn {
     transition: 0.3s;
 }
 
-main .genre {
+main .ref {
     color: #b411d3;
     text-decoration: none;
 }
 
-main .genre:hover {
+main .ref:hover {
     text-decoration: underline;
 }
 
