--- a/src/main/resources/templates/actors-list.html
+++ b/src/main/resources/templates/actors-list.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
-    <title></title>
+    <title>Herci</title>
 </head>
 <body>
     <div th:replace="~{fragments/nav.html :: header}"></div>
