--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -9,7 +9,7 @@
 </head>
 <header th:fragment="header">
     <nav class="navbar navbar-expand-lg" id="nav">
-        <div class="container-fluid">
+        <div class="container-fluid d-flex justify-content-around">
             <a class="text-light navbar-brand">Databáze filmů</a>
             <div class="collapse navbar-collapse" id="navbarNav" >
                 <ul class="navbar-nav">
@@ -20,11 +20,13 @@
                         <a class="text-light nav-link" href="/actor">Herci</a>
                     </li>
                     <li class="nav-item">
-                        <a class="text-light nav-link" href="#">Pricing</a>
+                        <a class="text-light nav-link" href="/login">Přihlásit se</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="text-light nav-link" href="/register">Registrovat se</a>
                     </li>
                 </ul>
             </div>
-
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="vyhledat" aria-label="Search">
                 <button class="btn btn-success" type="submit">Vyhledat</button>
