--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -20,6 +20,9 @@
                         <a class="text-light nav-link" href="/actor">Herci</a>
                     </li>
                     <li class="nav-item">
+                        <a class="text-light nav-link" href="/director">Režiséři</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="text-light nav-link" href="/login">Přihlásit se</a>
                     </li>
                     <li class="nav-item">
