--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -22,10 +22,10 @@
                     <li class="nav-item">
                         <a class="text-light nav-link" href="/director">Režiséři</a>
                     </li>
-                    <li class="nav-item">
+                    <li sec:authorize="!isAuthenticated()" class="nav-item">
                         <a class="text-light nav-link" href="/login">Přihlásit se</a>
                     </li>
-                    <li class="nav-item">
+                    <li sec:authorize="!isAuthenticated()" class="nav-item">
                         <a class="text-light nav-link" href="/register">Registrovat se</a>
                     </li>
                 </ul>
