Přidání entity Review + možnost přidat recenze registrovaným uživatelům

--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -28,6 +28,9 @@
                     <li sec:authorize="!isAuthenticated()" class="nav-item">
                         <a class="text-light nav-link" href="/register">Registrovat se</a>
                     </li>
+                    <li sec:authorize="isAuthenticated()" class="nav-item">
+                        <a class="text-light nav-link" href="/logout">Odhlásit se</a>
+                    </li>
                 </ul>
             </div>
             <form class="d-flex" role="search">
