--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -12,7 +12,7 @@
     <div th:replace="~{fragments/nav.html :: header}"></div>
     <main class="container">
         <form action="/login" method="POST">
-            <h1 class="text-center">Přihlášení</h1>
+            <h1 class="text-center my-2">Přihlášení</h1>
             <div class="mb-3">
                 <label class="form-label" for="email">Email</label>
                 <input class="form-control" id="email" type="email" name="username" required>
