--- a/src/main/resources/templates/director-list.html
+++ b/src/main/resources/templates/director-list.html
@@ -10,17 +10,18 @@
 <body>
 <div th:replace="~{fragments/nav.html :: header}"></div>
 <main class="container my-2">
-    <a href="/director/new" class="btn my-1">Přidat režiséra</a>
-    <div class="row row-cols-3">
-        <div th:each="director : ${directorsPage.content}" class="card p-0 mx-2 mb-3 overflow-hidden" style="width: 18rem;">
-            <img th:src="@{/{path}(path=${director.imagePath})}" class="card-img-top" alt="herec">
-            <div class="card-body">
-                <h5 class="card-title" th:text="${director.name} + ' ' + ${director.surname}"></h5>
-                <a class="btn" th:href="@{/director/{id}(id=${director.id})}">Zobrazit detail</a>
+    <div class="">
+        <a href="/director/new" sec:authorize="hasAnyAuthority('ADMIN')" class="btn my-1">Přidat režiséra</a>
+        <div class="content-block row row-cols-3">
+            <div th:each="director : ${directorsPage.content}" class="card p-0 mx-2 mb-3 overflow-hidden" style="width: 18rem;">
+                <img th:src="@{/{path}(path=${director.imagePath})}" class="card-img-top" alt="herec">
+                <div class="card-body">
+                    <h5 class="card-title" th:text="${director.name} + ' ' + ${director.surname}"></h5>
+                    <a class="btn" th:href="@{/director/{id}(id=${director.id})}">Zobrazit detail</a>
+                </div>
             </div>
         </div>
     </div>
-
 </main>
 </body>
 </html>
