--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -10,7 +10,7 @@
 <header th:fragment="header">
     <nav class="navbar navbar-expand-lg" id="nav">
         <div class="container-fluid d-flex justify-content-around">
-            <a class="text-light navbar-brand">Databáze filmů</a>
+            <a class="navbar-brand">TopMov</a>
             <div class="collapse navbar-collapse" id="navbarNav" >
                 <ul class="navbar-nav">
                     <li class="nav-item">
@@ -35,7 +35,7 @@
             </div>
             <form class="d-flex" role="search">
                 <input class="form-control me-2" type="search" placeholder="vyhledat" aria-label="Search">
-                <button class="btn btn-success" type="submit">Vyhledat</button>
+                <button class="btn search-btn" type="submit">Vyhledat</button>
             </form>
         </div>
     </nav>
