--- a/src/main/resources/templates/movie-list.html
+++ b/src/main/resources/templates/movie-list.html
@@ -11,18 +11,21 @@
     <div th:replace="~{fragments/nav.html :: header}"></div>
     <main class="container my-2">
         <a href="/movie/new" sec:authorize="hasAnyAuthority('ADMIN')" class="btn my-1">Přidat nový film</a>
-        <div class="row row-cols-3">
-            <div th:each="movie : ${movies.content}" class="card p-0 mx-2 mb-3 overflow-hidden" style="width: 18rem;">
-                <div class="card-header">
-                    Žánry:
-                    <span th:each="genre : ${movie.getGenres()}" th:text="${genre.name}" class="badge mx-1"></span>
-                </div>
-                <img th:src="@{/{path}(path=${movie.imagePath})}" class="card-img-top" alt="film">
-                <div class="card-body">
-                    <h5 class="card-title" th:text="${movie.name}"></h5>
-                    <a th:href="@{/movie/{id}(id=${movie.id})}" class="btn">Zobrazit detail</a>
+        <div>
+            <div class="content-block row row-cols-3">
+                <div th:each="movie : ${movies.content}" class="card p-0 mx-2 mb-3 overflow-hidden" style="width: 18rem;">
+                    <div class="card-header">
+                        Žánry:
+                        <span th:each="genre : ${movie.getGenres()}" th:text="${genre.name}" class="badge mx-1"></span>
+                    </div>
+                    <img th:src="@{/{path}(path=${movie.imagePath})}" class="card-img-top" alt="film">
+                    <div class="card-body">
+                        <h5 class="card-title" th:text="${movie.name}"></h5>
+                        <a th:href="@{/movie/{id}(id=${movie.id})}" class="btn">Zobrazit detail</a>
+                    </div>
                 </div>
             </div>
+
         </div>
     </main>
 </body>
