--- a/src/main/resources/templates/movie-list.html
+++ b/src/main/resources/templates/movie-list.html
@@ -5,12 +5,14 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <title>Filmy</title>
 </head>
 <body>
     <div th:replace="~{fragments/nav.html :: header}"></div>
     <main class="container my-2">
         <a href="/movie/new" sec:authorize="hasAnyAuthority('ADMIN')" class="btn my-1">Přidat nový film</a>
+        <a sec:authorize="hasAnyAuthority('ADMIN')" th:href="@{/movie/export/excel}" class="btn"><span class="material-symbols-outlined">ios_share</span></a>
         <div>
             <div class="content-block row row-cols-3">
                 <div th:each="movie : ${movies.content}" class="card p-0 mx-2 mb-3 overflow-hidden" style="width: 18rem;">
