--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -49,6 +49,15 @@ label {
     border-bottom: 3px solid white;
 }
 
+.control-panel {
+    display: flex;
+    flex-direction: row;
+}
+
+.control-panel div {
+    margin: 0px 10px;
+}
+
 main .btn {
     background: #ebeb05;
     transition: 0.3s;
@@ -119,6 +128,7 @@ main .btn:hover {
     background: #ebeb05;
     border-radius: 20px;
     font-size: 2.2rem;
+    color: black;
     display: flex;
     justify-content: center;
     font-weight: 700;
