--- a/src/main/resources/templates/fragments/movie-fragments.html
+++ b/src/main/resources/templates/fragments/movie-fragments.html
@@ -5,15 +5,10 @@
     <link rel="stylesheet" type="text/css" th:href="@{/webjars/bootstrap/css/bootstrap.min.css}" />
     <script type="text/javascript" th:src="@{/webjars/bootstrap/js/bootstrap.bundle.min.js}"></script>
     <link rel="stylesheet" th:href="@{/css/style.css}">
-    <script type="text/javascript" defer th:src="@{/script/recommend.js}"></script>
-    <title>Doporučení</title>
+    <title>Filmy</title>
 </head>
 <body>
-    <div th:replace="~{fragments/nav.html :: header}"></div>
-    <main class="container my-3">
-        <div class="text-center">
-            <button id="recommendBtn" class="btn">Vytvořit doporučení</button>
-        </div>
-    </main>
+    <div th:fragment="movie">
+    </div>
 </body>
 </html>
