--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -33,6 +33,10 @@
                     Ok
                 </div>
             </div>
+            <div>
+                <input type="checkbox" class="form-check-input" name="rememberMe" id="rememberMe">
+                <label for="rememberMe" class="form-check-label">Zapamatovat si</label>
+            </div>
             <div class="text-center">
                 <button type="submit" value="Log in" class="btn">Přihlásit se</button>
             </div>
