--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -22,6 +22,9 @@
                     <li class="nav-item">
                         <a class="text-light nav-link" href="/director">Režiséři</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="text-light nav-link" href="/recommend">Doporučení</a>
+                    </li>
                     <li sec:authorize="!isAuthenticated()" class="nav-item">
                         <a class="text-light nav-link" href="/login">Přihlásit se</a>
                     </li>
