--- a/src/main/resources/templates/recommend.html
+++ b/src/main/resources/templates/recommend.html
@@ -12,6 +12,8 @@
     <div th:replace="~{fragments/nav.html :: header}"></div>
     <main class="container my-3">
         <div class="text-center">
+            <div class="recommend">
+            </div>
             <button id="recommendBtn" class="btn">Vytvořit doporučení</button>
         </div>
     </main>
