Přidání stránky pro kontrolu historii změň

--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -155,3 +155,8 @@ main .btn:hover {
     display: flex;
     justify-content: center;
 }
+
+.table>:not(caption)>*>* {
+    background: #1d191d;
+    color: white;
+}
