--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -32,7 +32,7 @@
                         <a class="text-light nav-link" href="/register">Registrovat se</a>
                     </li>
                     <li sec:authorize="hasAnyAuthority('ADMIN')" class="nav-item">
-                        <a class="text-light nav-link" href="/audit">Auditing</a>
+                        <a class="text-light nav-link" href="/audit/movie">Auditing</a>
                     </li>
                     <li sec:authorize="isAuthenticated()" class="nav-item">
                         <a class="text-light nav-link" href="/logout">Odhlásit se</a>
@@ -46,4 +46,7 @@
         </div>
     </nav>
 </header>
+<nav th:fragment="audit">
+
+</nav>
 </html>
