--- a/src/main/resources/templates/movie-detail.html
+++ b/src/main/resources/templates/movie-detail.html
@@ -17,7 +17,7 @@
             <form sec:authorize="isAuthenticated()" method="POST" th:unless="${!user.getMovies().contains(movie)}" th:action="@{/rmFavourite/movie/{id}(id=${movie.id})}">
                 <button type="submit" class="btn me-2" >Odebrat z oblíbených</button>
             </form>
-            <a class="btn" th:href="@{/movie/edit/{id}(id=${movie.id})}">Editovat film</a>
+            <a sec:authorize="hasAnyAuthority('ADMIN', 'EDITOR')" class="btn" th:href="@{/movie/edit/{id}(id=${movie.id})}">Editovat film</a>
         </div>
         <div class="page">
             <div class="d-flex flex-row movie-detail">
