--- a/src/main/resources/templates/audit-actor.html
+++ b/src/main/resources/templates/audit-actor.html
@@ -8,21 +8,22 @@
     <title>Audit herců</title>
 </head>
 <body>
-<div th:replace="~{fragments/nav.html :: header}"></div>
-<main class="container my-2">
-    <h3 class="my-2 text-light">Auditing herců</h3>
-    <table id="audit-table" class="table">
-        <div th:replace="~{audit-movie :: thead}"></div>
-        <tbody>
-        <tr th:each="revision : ${revisionEntityList}">
-            <td th:text="${revision.entity.id}"></td>
-            <td><a class="ref" th:href="@{/actor/{id}(id=${revision.entity.id})}" th:text="${revision.entity.name + ' ' + revision.entity.surname}"></a></td>
-            <td th:text="${#temporals.format(revision.getTimestamp(), 'dd.MM.yyyy HH:mm:ss')}"></td>
-            <td th:text="${revision.revType.getRepresentation() == 1 ? 'EDITACE' : (revision.getRevType().getRepresentation() == 2 ? 'SMAZÁNÍ' : 'PŘIDANÍ')}"></td>
-            <td th:text="${revision.username}"></td>
-        </tr>
-        </tbody>
-    </table>
-</main>
+    <div th:replace="~{fragments/nav.html :: header}"></div>
+    <main class="container my-2">
+        <div th:replace="~{fragments/nav.html :: audit}"></div>
+        <h3 class="my-2 text-light">Auditing herců</h3>
+        <table id="audit-table" class="table">
+            <div th:replace="~{audit-movie :: thead}"></div>
+            <tbody>
+            <tr th:each="revision : ${revisionEntityList}">
+                <td th:text="${revision.entity.id}"></td>
+                <td><a class="ref" th:href="@{/actor/{id}(id=${revision.entity.id})}" th:text="${revision.entity.name + ' ' + revision.entity.surname}"></a></td>
+                <td th:text="${#temporals.format(revision.getTimestamp(), 'dd.MM.yyyy HH:mm:ss')}"></td>
+                <td th:text="${revision.revType.getRepresentation() == 1 ? 'EDITACE' : (revision.getRevType().getRepresentation() == 2 ? 'SMAZÁNÍ' : 'PŘIDANÍ')}"></td>
+                <td th:text="${revision.username}"></td>
+            </tr>
+            </tbody>
+        </table>
+    </main>
 </body>
 </html>
