--- a/src/main/resources/templates/fragments/nav.html
+++ b/src/main/resources/templates/fragments/nav.html
@@ -8,7 +8,7 @@
     <title>Filmy</title>
 </head>
 <header th:fragment="header">
-    <nav class="navbar navbar-expand-lg" id="nav">
+    <nav class="navbar navbar-expand-lg head">
         <div class="container-fluid d-flex justify-content-around">
             <a class="navbar-brand">TopMov</a>
             <div class="collapse navbar-collapse" id="navbarNav" >
@@ -46,7 +46,11 @@
         </div>
     </nav>
 </header>
-<nav th:fragment="audit">
-
-</nav>
+    <nav style="width: 50%" th:fragment="audit" class="head rounded-4">
+        <ul class="navbar-nav d-flex flex-row">
+            <li class="nav-item"><a class="nav-link text-light mx-3" href="/audit/movie">Filmy</a></li>
+            <li class="nav-item"><a class="nav-link text-light mx-3" href="/audit/actor">Herci</a></li>
+            <li class="nav-item"><a class="nav-link text-light mx-3" href="/audit/director">Režiséři</a></li>
+        </ul>
+    </nav>
 </html>
